# limit-order-book

./: .clang-format  CMakeLists.txt  README.md
include/: Constants.h  MatchResult.h  OrderBook.h  OrderNode.h  OrderRequest.h  OrderStatus.h  OrderType.h  PriceLevel.h  RingBuffer.h  SelfTradePrevention.h  Server.h  Side.h  Trade.h  Using.h
src/: Main.cpp  MainOld.cpp  OrderBook.cpp  OrderNode.cpp  OrderStatus.cpp  PriceLevel.cpp  RingBuffer.cpp  Server.cpp
tests/: CMakeLists.txt  OrderBookTests.cpp
